[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art Packs/Planets2D/Planets-Atmosphere-pngs/planet-1.png" type="Texture" id=1]
[ext_resource path="res://Levels/LevelSelect/SelectablePlanet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 57.4139

[node name="Planet" type="Node2D" groups=[
"Level",
]]
script = ExtResource( 2 )

[node name="PlanetSprite" type="Sprite" parent="."]
scale = Vector2( 0.114797, 0.114797 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="LevelPanel" type="Panel" parent="."]
margin_left = -64.5275
margin_top = -106.047
margin_right = 60.4725
margin_bottom = -74.0473
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelDescription" type="Label" parent="LevelPanel"]
margin_right = 40.0
margin_bottom = 14.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
